# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./feeding";
 export * from "./diapers";
 export * from "./routines";
 export * from "./videos";
+export * from "./milestones";
